--- a/css/n00001.css
+++ b/css/n00001.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #333333;
+    }
+}
+
 body {
     margin: 0;
     font-family: 'Noto Sans JP', sans-serif;
