--- a/css/new.css
+++ b/css/new.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #333333;
+    }
+}
+
 body {
     margin: 0;
     font-family: 'Noto Sans JP', sans-serif;
