--- a/css/mangayohoho.css
+++ b/css/mangayohoho.css
@@ -1,8 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 
 @media (prefers-color-scheme: dark) {
-    body {
+    body , .searchBox > input {
         background-color: #333333;
+    }
+
+    .infoBox {
+        background-color: #000000;
+    }
+
+    .infos , .hideText , .searchBox > input {
+        color: white;
+    }
+
+    .searchBox > input {
+        border-color: #ffffff;
     }
 }
 
