--- a/css/n00001.css
+++ b/css/n00001.css
@@ -5,6 +5,10 @@
     body {
         background-color: #333333;
     }
+
+    .bookTitle , .statement , .book {
+        color: #ffffff;
+    }
 }
 
 body {
