--- a/css/request.css
+++ b/css/request.css
@@ -4,6 +4,11 @@
     body {
         background-color: #333333;
     }
+
+    .text {
+        background-color: #333333;
+        color: #ffffff;
+    }
 }
 
 body {
@@ -39,7 +44,8 @@ body {
     color: #F60F0F;
 }
 
-@media screen and (min-width:821px) {.formBox {
+@media screen and (min-width:821px) {
+    .formBox {
         width: 50%;
         margin-left: 25%;
     }
